fixed a NPE when reloading the plugin, and SidekickPlugin.getSideKick() cannot be public since SideKick class is not public